# paillier-halo2

./: .gitignore  Cargo.toml  README.md
src/: bench.rs  chips.rs  circuits.rs  lib.rs  paillier.rs  pallier.rs  utils.rs
src/big_uint/: chip.rs  instructions.rs  mod.rs  utils.rs
src/biguint/: chip.rs  mod.rs
src/chips/: helper.rs  pallier_enc_chip.rs
src/circuits/: modexp_circuit.rs  pallier_enc_circuit.rs
src/paillier/: chip.rs  instructions.rs  mod.rs
