[package]
name = "paillier-chip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
halo2-base = { git = "https://github.com/aerius-labs/halo2-lib.git", branch = "feat/secp256k1-hash2curve", default-features = false, features = ["halo2-axiom", "test-utils"] }
halo2-ecc = { git = "https://github.com/aerius-labs/halo2-lib.git", branch = "feat/secp256k1-hash2curve", default-features = false, features = ["halo2-axiom"] }
biguint-halo2 = { git = "https://github.com/aerius-labs/biguint-halo2" }
num-bigint = "0.4.4"
num-traits = "0.2.17"
rand = "0.8.5"
serde = "1.0.195"
